# make-a-fortune-rpc-rs

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  README_zh.md  Rocket.toml  fly.toml
.github/workflows/: build.yml  deploy.yml  test.yml
src/: config.rs  main.rs  tcp.rs  types.rs
