[package]
name = "fortune-rpc-rs"
version = "0.2.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2018"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8d4d01106e2e10b08100805d40bfa19a7357e900" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "8d4d01106e2e10b08100805d40bfa19a7357e900", default-features=false, features=["json"] }
serde = "1.0"
serde_json = "1.0"
humantime-serde = "1.0"
rocket_cors = { git = "https://github.com/PhotonQuantum/rocket_cors", rev = "868e8fd185cd1dc3b1f448f9b46c13f96f97e68d" }
thiserror = "1.0"
